Migration with ef functionalities

--- a/Asp_Net_MVC/appsettings.json
+++ b/Asp_Net_MVC/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": {
-    "EmployeeDBConnection" :  "server=.;user id=sa;password=Vennai_1;data source=EmployeeDB;"
+  "ConnectionStrings": {
+    "EmployeeDBConnection" :  "Data source=.;user id=sa;password=Vennai_1;initial catalog=EmployeeDB;"
   }
 }
