--- a/Asp_Net_MVC/appsettings.json
+++ b/Asp_Net_MVC/appsettings.json
@@ -1,8 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning, Error",
+      "Default": "Trace",
+      "Asp_Net_MVC.Controllers.HomeController": "Warning",
+      "Microsoft": "Warning"
       //"Microsoft.Hosting.Lifetime": "Information"
     }
   },
