Changed connection string to azure db

--- a/Asp_Net_MVC/appsettings.json
+++ b/Asp_Net_MVC/appsettings.json
@@ -9,6 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EmployeeDBConnection": "Data source=.;user id=sa;password=Vennai_1;initial catalog=EmployeeDB;MultipleActiveResultSets=true"
+    //"EmployeeDBConnection": "Data source=.;user id=sa;password=Vennai_1;initial catalog=EmployeeDB;MultipleActiveResultSets=true"
+    "EmployeeDBConnection": "Server=tcp:newmancroos.database.windows.net,1433;Initial Catalog=EmployeeDb;Persist Security Info=False;User ID=newmancroos;Password=Selvasri_0812;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
